<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="107dp"
        android:layout_height="116dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/photo_2020_08_15_18_53_50" />

    <LinearLayout
        android:layout_width="253dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cosmetic_1"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/manufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cosmetic_2" />

        <TextView
            android:id="@+id/origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cosmetic_3" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cosmetic_4" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/removeBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:scaleType="centerInside"
        android:visibility="visible"
        app:srcCompat="@drawable/remove" />
</LinearLayout>